增加错题本子页面和做作业界面并传值

--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -23,9 +23,13 @@
 		    	<div class="brief-words">
 		    		<h5 class='brief-title'></h5>
 		    		<p class="brief-content"></p>
-		    		<p class="publish-info"></p>
+		    		<div class="publish-info">
+		    			<p class="publisher"></p>
+		    			<p class='publish-date'></p>
+		    		</div>
 		    	</div>
 		    </div>
+		    <div><button id="btn-startWork" type="button" class="mui-btn mui-btn-blue mui-pull-right">开始答题</button></div>
 		    <div class="homework-detail"></div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
