--- a/JiaoBaoYun-hb/html/homework/workstu-err.html
+++ b/JiaoBaoYun-hb/html/homework/workstu-err.html
@@ -1,4 +1,4 @@
-<!--错题本界面-->
+<!--错题本主界面-->
 <!--
 	@author an
 -->
@@ -16,12 +16,14 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">错题本</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">错题本</h1>
 		</header>
+		
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			events.initSubPage('workstu-errSub.html');
 		</script>
 	</body>
 
