--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -47,47 +47,46 @@
 					if(data.RspCode == 0) {
 						//给数组赋值
 						answerListArray = data.RspData;
-						//16.通过群ID获取群对象资料
+						//13.通过群ID获取群的正常用户
 						//所需参数
 						var comData = {
-							vtp: '0', //0普通资料获取(vvl1传要获取的身份),1邀请关联资料(主老师用,vvl1传邀请的身份)
-							top: '-1', //选择条数,-1为全部
-							vvl: classID, //群ID,查询的值
-							vvl1: '-1' //类型,0家长,1管理员,2老师,3学生,-1全部
+							top: '-1', //选择条数
+							vvl: classID, //群ID，查询的值
+							vvl1: '-1' //群员类型，0家长,1管理员,2老师,3学生,-1取全部
 						};
-						//16.通过群ID获取群对象资料
-						postDataPro_PostGUInf(comData, wd, function(data1) {
+						//13.通过群ID获取群的正常用户
+						postDataPro_PostGusers(comData, wd, function(data1) {
 							wd.close();
-							console.log('16.postDataPro_PostGUInf:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+							console.log('13.postDataPro_PostGusers:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
 							if(data1.RspCode == 0) {
-								//循环数组，将对应的资料id，塞入对应值
-								for (var m in data1.RspData) {
+								//循环数组，将对应的信息id，塞入对应值
+								for(var m in data1.RspData) {
 									var tempModel0 = data1.RspData[m];
-									for (var n in answerListArray) {
+									for(var n in answerListArray) {
 										var tempModel1 = answerListArray[n];
 										var QuestionResultStr = '';
 										//遍历里面的答案结果列表，进行数据拼接
-										for (var a in tempModel1.QuestionResults) {
+										for(var a in tempModel1.QuestionResults) {
 											var tempResultModel = tempModel1.QuestionResults[a];
-											if (tempResultModel.IsRight) {
+											if(tempResultModel.IsRight) {
 												QuestionResultStr = QuestionResultStr + tempResultModel.QuestionNo + '.' + '正确，';
-											} else{
+											} else {
 												QuestionResultStr = QuestionResultStr + tempResultModel.QuestionNo + '.' + '错误，';
 											}
 										}
 										//赋值答案字符串
 										tempModel1.QuestionResultStr = QuestionResultStr;
 										//判断id是否一致
-										if (tempModel1.StudentId == tempModel0.stuid) {
+										if(tempModel1.StudentId == tempModel0.utid) {
 											//合并
 											tempModel1 = $.extend(tempModel1, tempModel0);
 										}
 									}
 								}
 							}
-							console.log('最终的数据为:'+JSON.stringify(answerListArray));
+							console.log('最终的数据为:' + JSON.stringify(answerListArray));
 							//刷新界面
-							
+
 						});
 
 					} else {
