--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -414,7 +414,7 @@
 								mui.toast('删除成功');
 								//数据处理
 								mui.each(topFolderData[0].fdata, function(index, item) {
-									if(item2.fid == fid) {
+									if(item.fid == fid) {
 										topFolderData[0].fdata.splice(index, 1);
 										return false;
 									}
@@ -501,7 +501,9 @@
 				div.setAttribute('id', 'pid_' + pid);
 				div.innerHTML = '<div class="mui-scroll-wrapper"style="top:' + top + 'px;">\
 									<div class="mui-scroll">\
-										<ul id="ul_' + pid + '" class="mui-table-view">\
+										<ul id="ul_folder_' + pid + '" class="mui-table-view">\
+										</ul>\
+										<ul id="ul_file_' + pid + '" class="mui-table-view">\
 										</ul>\
 									</div>\
 								</div>';
@@ -542,10 +544,15 @@
 					if(showTop) {
 						html1 = '<span class="mui-media-object mui-pull-right"></span>';
 						var type = cloud.classify(data.ftype);
+						var pathList = data.fpath.split('/');
+						var pathList2 = pathList[pathList.length - 1].split('.');
+						var fileName = pathList2[0];
+						var path = window.storageKeyName.QNFILEIMGEDOMAIN + fileName + '.PNG';
+						console.log('path:' + path);
 						if(type != '') {
 							html3 = '<span class="mui-media-object mui-icon iconfont iconfont-size ' + type + ' mui-pull-left"></span>';
 						} else { //七牛能生成缩略图的图片或视频
-							html3 = '<img class="mui-media-object cloud-bottom-imge mui-pull-left" src="' + data.fpath + '" />';
+							html3 = '<img class="mui-media-object cloud-bottom-imge mui-pull-left" src="' + path + '" />';
 						}
 						html4 = '<div class="mui-media-body">\
 								<div id="fname_' + data.fid + '" class="mui-ellipsis">' + data.fname + data.ftype + '</div>\
@@ -556,7 +563,11 @@
 					html2 = '';
 				}
 				li.innerHTML = html1 + html2 + html3 + html4;
-				document.getElementById("ul_" + data.pid).appendChild(li)
+				if(data.ftype == '.file') { //文件夹
+					document.getElementById("ul_folder_" + data.pid).appendChild(li);
+				} else {
+					document.getElementById("ul_file_" + data.pid).appendChild(li);
+				}
 			}
 
 			/**
